# gem_suite

./: .gitignore  CLAUDE.md  README.md  SPEC.md  SPEC_strain_design_addendum.md  pyproject.toml
docs/: README.md  getting-started.md  under-the-hood.md  user-guide.md
gem_suite/: __init__.py  efm.py  ki_parser.py  manifest.py  model_service.py  presets.py  strain_design.py
gem_suite/app/: __init__.py  controllers.py  main.py  services.py
gem_suite/app/assets/: theme.css
gem_suite/app/pages/: __init__.py  analysis.py  exchanges.py  load.py  reactions.py  scan.py  strain_design.py
gem_suite/data/: __init__.py
gem_suite/jobs/: __init__.py  local.py  runners.py  slurm.py  spec.py
tests/: conftest.py  test_app.py  test_editing.py  test_efm.py  test_exchanges.py  test_jobs.py  test_ki_parser.py  test_manifest.py  test_model_service.py  test_presets.py  test_strain_design.py
